bff/manifests/01-deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: bff
  namespace: bff
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  strategy:
    blueGreen:
      activeService: bff
      previewService: bff-new
      autoPromotionEnabled: false
  selector:
    matchLabels:
      app.kubernetes.io/name: bff
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bff
    spec:
      containers:
      - image: quinont/bff:v1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /hello/liveness
            port: http
            scheme: HTTP
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 5
        name: bff
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /hello/readiness
            port: http
            scheme: HTTP
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
      terminationGracePeriodSeconds: 30
